Ajout de la réapparition des ennemis, mais provoque un trop gros nombre d'état donc cette branche ne sera probablement plus developpée